Make website responsive

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </ul>
             </nav>
 
-            <a href="assets/docs/Yahuza Sulley CV.pdf" class="btn btn-secondary" download>Download My CV</a>
+            <a href="assets/docs/Yahuza Sulley CV.pdf" class="download-cv btn btn-secondary" download>Download My CV</a>
         </div>
     </header>
 
@@ -438,7 +438,18 @@
                 </div>
                 <div class="cert-info">
                     <h3>Code Alpha Cybersecurity Certificate</h3>
-                    <a href="assets/docs/thumbnails/Code Alpha Internship Certificate.jpeg" class="btn btn-secondary" target="_blank"
+                    <a href="assets/docs/thumbnails/Code Alpha Cybersecurity Certificate.jpg" class="btn btn-secondary" target="_blank"
+                        >View</a>
+                </div>
+            </div>
+            
+            <div class="certificate">
+                <div class="cert-thumbnail">
+                    <img src="assets/docs/thumbnails/java.jpg" alt="Sulley Yahuza Certificate Thumbnail">
+                </div>
+                <div class="cert-info">
+                    <h3>JAVA Certificate</h3>
+                    <a href="assets/docs/thumbnails/java.jpg" class="btn btn-secondary" target="_blank"
                         >View</a>
                 </div>
             </div>
@@ -459,7 +470,9 @@
                     <img src="assets/images/alhassanbaaba.jfif" alt="Abdullahi Alhassan Baaba Picture">
                     <div class="author-info">
                         <h3>Abdullahi Alhassan Baaba</h3>
-                        LinkedIn - <a href="https://www.linkedin.com/in/alhassanbaaba" target="_blank">@alhassanbaaba</a>
+                        <small>
+                            LinkedIn - <a href="https://www.linkedin.com/in/alhassanbaaba" target="_blank">@alhassanbaaba</a>
+                        </small>
                     </div>
                 </div>
             </div>
