--- a/index.html
+++ b/index.html
@@ -30,9 +30,35 @@
                 </ul>
             </nav>
 
-            <a href="assets/docs/Yahuza Sulley CV.pdf" class="download-cv btn btn-secondary" download>Download My CV</a>
+            <div class="sec-nav">
+                <a href="assets/docs/Yahuza Sulley CV.pdf" class="download-cv btn btn-secondary" download>Download My CV</a>
+                
+                <div class="hamburger" id="hamburger">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div>
+            </div>
         </div>
+
     </header>
+    <aside class="sidebar" id="sidebar">
+        <nav class="sidebar-menu">
+            <ul>
+                <li><a href="#hero">Home</a></li>
+                    <li><a href="#about">About Me</a></li>
+                    <li><a href="#projects">My Projects</a></li>
+                    <li><a href="#startup">My Start Up</a></li>
+                    <li><a href="#certificates">My Certifications</a></li>
+                    <li><a href="#testimonial">Testimonial</a></li>
+                    <li><a href="#contact">Contact Me</a></li>
+            </ul>
+
+            <a href="assets/docs/Yahuza Sulley CV.pdf" class="aside-download-cv btn btn-secondary" download>Download My CV</a>
+        </nav>
+    </aside>
+
+
 
     <!-- Sections of the page -->
     <!-- Hero Section -->
