Update CV document

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h1>A Computer Programmer & Tech Enthusiast</h1>
                 <p>I build creative solutions with code, and I&apos;m passionate about what I do. Let's create something
                     amazing together!</p>
-                <a href="assets/docs/CV Yahuza Sulley.png" class="btn btn-secondary" target="_blank">View My CV</a>
+                <a href="assets/docs/CV Yahuza Sulley.jpg" class="btn btn-secondary" target="_blank">View My CV</a>
                 <a href="#projects" class="btn btn-ghost-sec">Go to Projects</a>
             </div>
 
