--- a/index.html
+++ b/index.html
@@ -318,6 +318,23 @@
             </div>
             <div class="startup-image">
                 <!-- <img src="assets/images/pynotech.svg" alt="Pynotech Solutions Logo"> -->
+                <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 24.3.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 1022.44 562.4" style="enable-background:new 0 0 1022.44 562.4;" xml:space="preserve">
+                <style type="text/css">
+                    .st0{fill:#231F20;}
+                </style>
+                <g>
+                    <path class="st0" d="M483.03,150.76v260.88c0,2.87-2.33,5.2-5.2,5.2h-57.41c-2.87,0-5.2-2.33-5.2-5.2V218.58
+                        c0-2.87-2.33-5.2-5.2-5.2h-20.85c-3.77,0-6.29-3.88-4.75-7.32l25.58-57.41c0.84-1.88,2.7-3.09,4.75-3.09h63.1
+                        C480.7,145.55,483.03,147.88,483.03,150.76z"/>
+                    <path class="st0" d="M638.5,150.71v193.17c0,2.85-2.31,5.15-5.15,5.15H508c-2.85,0-5.15-2.31-5.15-5.15v-57.53
+                        c0-2.85,2.31-5.15,5.15-5.15h57.52c2.85,0,5.15-2.31,5.15-5.15v-57.52c0-2.85-2.31-5.15-5.15-5.15H508c-2.85,0-5.15-2.31-5.15-5.15
+                        v-57.52c0-2.85,2.31-5.15,5.15-5.15h125.35C636.19,145.55,638.5,147.86,638.5,150.71z"/>
+                </g>
+                </svg>
+                
             </div>
         </div>
     </section>
